# druk_helper

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ADDITIONAL_DATA_STRUCTURES.md  AI_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  ASYNC_MIGRATION_REPORT.md  BUTTON_TEXT_VALIDATION.md  CI_CD_README.md  CLAUDE_CONTEXT.md  CONVERSATION_LOGGING_ANALYSIS.md  COST_OPTIMIZATION_SUGGESTIONS.md  DEPENDENCIES_UPDATE.md  DEPLOYMENT.md  ENHANCED_AI_INTEGRATION_EXAMPLE.py  ENHANCED_AI_USAGE_GUIDE.md  GOOGLE_SHEETS_STRUCTURE_ANALYSIS.md  IMPROVED_PROMPT_STRATEGY.md  JSON_VS_MYSQL_PERFORMANCE.md  KNOWLEDGE_BASE_IMPROVEMENT_PLAN.md  KNOWLEDGE_BASE_MANAGEMENT.md  MYSQL_HISTORY_INTEGRATION.md  Makefile  OPEN-API.txt  PREMIUM_AUTOMATION_STRATEGY.md  PREMIUM_PRICING_ENHANCEMENT.py  README.md  README_NEW_STRUCTURE.md  TELEGRAM_COMMANDS_STATUS.md  TELEGRAM_MANAGERS_IMPLEMENTATION.md  TELEGRAM_MANAGERS_SYSTEM.md  UPSELLING_INTEGRATION_EXAMPLE.md  UPSELLING_STRATEGY.md  UPSELL_TRIGGERS_STRATEGY.md  WHITESPACE_FIXES_README.md  ai_service.py  bot_api.py  bot_factory.py  (+47 more)
.github/workflows/: ci.yml
converted-data/: .cache.json  stats.json
converted-data/csv/: bloknoty_page_05.csv  futbolki_page_02.csv  listovki_page_03.csv  nakleyki_page_04.csv  vizitki_page_01.csv  Скрипт продаж (telegram) - ЯСКРАВИЙ ДРУК 2025 - Визитки (1).csv
converted-data/excel/: bloknoty_05.xlsx  bloknoty_page_05.xlsx  futbolki_02.xlsx  futbolki_page_02.xlsx  listovki_03.xlsx  listovki_page_03.xlsx  nakleiki_04.xlsx  nakleyki_page_04.xlsx  vizitki_01.xlsx  vizitki_page_01.xlsx
converted-data/html/: bloknoty_05.html  bloknoty_page_05.html  futbolki_02.html  futbolki_page_02.html  listovki_03.html  listovki_page_03.html  nakleiki_04.html  nakleyki_page_04.html  vizitki_01.html  vizitki_page_01.html
converted-data/json/: bloknoty_05.json  futbolki_02.json  futbolki_page_02.json  listovki_03.json  listovki_page_03.json  nakleiki_04.json  nakleyki_page_04.json  vizitki_01.json  vizitki_page_01.json
converted-data/markdown/: bloknoty_05.md  bloknoty_page_05.md  futbolki_02.md  futbolki_page_02.md  listovki_03.md  listovki_page_03.md  nakleiki_04.md  nakleyki_page_04.md  vizitki_01.md  vizitki_page_01.md
converted-data/txt/: bloknoty_05.txt  futbolki_02.txt  futbolki_page_02.txt  listovki_03.txt  listovki_page_03.txt  nakleiki_04.txt  nakleyki_page_04.txt  vizitki_page_01.txt
converted-data/yaml/: bloknoty_05.yml  bloknoty_page_05.yml  futbolki_02.yml  futbolki_page_02.yml  listovki_03.yml  listovki_page_03.yml  nakleiki_04.yml  nakleyki_page_04.yml  vizitki_01.yml  vizitki_page_01.yml
data/: analytics.db  bloknoty_templates.csv  futbolki_templates.csv  listovki_templates.csv  nakleyki_templates.csv  stats.json  unified_system.db  visitki_templates.csv  visitki_templates_2.csv  visitki_templates_3.csv  Скрипт продаж (telegram) - ЯСКРАВИЙ ДРУК 2025 - Визитки.csv
data/converted-data/: futbolki_page_02.csv  futbolki_page_02.json  futbolki_page_02.txt  listovki_page_03.csv  listovki_page_03.json  listovki_page_03.txt  vizitki_page_01.csv  vizitki_page_01.json  vizitki_page_01.txt
data/templates/: bloknoty_templates.csv  futbolki_templates.csv  listovki_templates.csv  nakleyki_templates.csv  visitki_templates.csv
google-converter/: additional_modules.py  code_analysis.py  demo_converter.py  modular_sheets_converter.py  sheets_converter_lib.py
scripts/: final_test.py  start_dashboard.py  test_analytics.py  test_knowledge_sync.py  test_real_openai.py  test_telegram_commands.py  verify_commands_registration.py
src/admin/: __init__.py  knowledge_base_manager.py  knowledge_sync_manager.py  quick_corrections.py
src/ai/: conversation_memory.py  enhanced_ai_service.py  enhanced_rag_service.py  knowledge_base.py  rag_service.py  service.py  smart_knowledge_updater.py  upselling_engine.py
src/analytics/: __init__.py  analytics_service.py  dashboard.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_config.py  test_google_sheets_updater.py  test_handlers.py  test_integration.py  test_stats.py  test_template_manager.py  test_validation.py
utils/: gsheet_optimized.py  gsheets_export.py
(+57 files in other folders)
